tests/sksl/errors/golden/ConstructorTypeMismatch.glsl
### Compilation failed:

error: 4: expected 'float', but found 'bool'
error: 6: 'bool2' is not a valid parameter to 'float2' constructor
error: 8: 'float2' is not a valid parameter to 'bool2' constructor
error: 10: cannot construct 'bool'
error: 12: cannot construct 'Foo'
error: 14: invalid argument to 'float' constructor (expected a number or bool, but found 'Foo')
error: 16: 'Foo' is not a valid parameter to 'float2' constructor
error: 18: expected 'float', but found 'bool'
8 errors
